Fix white area not covering entire page on homepage

--- a/_sass/components/_main-wrapper.scss
+++ b/_sass/components/_main-wrapper.scss
@@ -3,6 +3,7 @@
   background: linear-gradient(to bottom, #50A3E3, #A2F2CF);
 
   > .inner {
+    height: 100%;
     min-height: 100vh;
     background: $color-white;
   }
